# smart-expense-tracker

./: .gitignore  LICENSE  README.md
backend/: .env.example  .filenignore  list_expenses.csv  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: ai.py  analytics.py  authentication.py  budget.py  category.py  expense.py  export.py  file_upload.py  generate_monthly_report.py  income.py  predictions.py
backend/src/core/: config.py  database.py
backend/src/ml_models/: ml_algorithm.ipynb
backend/src/models/: authentication.py  budget.py  category.py  expense.py  file_upload.py  income.py
backend/src/schemas/: authentication.py  budget.py  category.py  expense.py  generate_monthly_report.py  income.py
backend/src/utils/: generate_otp_util.py  get_current_user_util.py  logger_util.py  password_hash_util.py  rate_limit_util.py  run.py
backend/tests/: test_db.py
backend/tests/api/: test_authentication.py  test_category.py  test_expense.py
docs/: roadmap.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthContainer.jsx  InputField.jsx
frontend/src/pages/: LoginPage.jsx  RegisterPage.jsx
