[project]
name = "smart-expense-tracker-with-ai-powered-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "fastapi-pagination>=0.14.3",
    "openpyxl>=3.1.5",
    "passlib[argon2]>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
