[project]
name = "smart-expense-tracker-with-ai-powered-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "fastapi-pagination>=0.14.3",
    "httpx>=0.28.1",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[argon2]>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
    "uvicorn>=0.37.0",
]

[tool.pytest.ini_options]
pythonpath = '.'    # or """['src', 'lib', 'tests']"""
testpaths = ['tests']
python_files = 'test_*.py'
